--- a/client/app.json
+++ b/client/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "name": "Cooknow",
-    "description": "React Native - Material Kit Free",
-    "slug": "rn-material-kit-free",
+    "description": "React Native App for Software Engineering",
+    "slug": "cooknow",
     "privacy": "unlisted",
     "sdkVersion": "31.0.0",
     "platforms": ["ios", "android"],
@@ -21,7 +21,12 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.cspyk.cooknow"
+    },
+    "android": {
+      "package": "com.cspyk.cooknow",
+      "googleServicesFile": "./google-services.json"
     }
   }
 }
