--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "expo": "^32.0.0",
     "galio-framework": "^0.4.4",
+    "mongodb-stitch-react-native-sdk": "^4.4.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-modal-dropdown": "^0.6.2",
@@ -35,7 +36,7 @@
     "babel-jest": "^24.8.0",
     "babel-preset-expo": "^5.0.0",
     "cross-env": "^5.2.0",
-    "expo-cli": "^2.4.0",
+    "expo-cli": "^2.20.0",
     "jest": "^24.8.0",
     "jest-expo": "^31.0.0"
   }
